--- a/proyectos Javascript/proyecto_objectGenerator/styles.css
+++ b/proyectos Javascript/proyecto_objectGenerator/styles.css
@@ -1,160 +1,166 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
 }
 
 body {
-    background-image: url('/proyecto_objectGenerator/images/papirus.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow-x: hidden;
+  background-image: url('/proyecto_objectGenerator/images/papirus.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow-x: hidden;
 }
 
 .game-title {
-    display: flex;
-    justify-content: center;
-    margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0;
 }
 
 .page-wrapper {
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 
 .carousel {
-    background-color: rgb(130, 97, 47, .7);
-    background-image: url('/proyecto_objectGenerator/images/war-vector-removebg-preview.webp');
-    background-repeat: no-repeat;
-    background-position: top right -15%;
-    background-size: auto;
-    background-blend-mode: exclusion;
-    display: flex;
-    align-items: start;
-    padding: 0 1.5rem;
+  background-color: rgb(130, 97, 47, .7);
+  background-image: url('/proyecto_objectGenerator/images/war-vector-removebg-preview.webp');
+  background-repeat: no-repeat;
+  background-position: top right -15%;
+  background-size: auto;
+  background-blend-mode: exclusion;
+  display: flex;
+  align-items: start;
+  padding: 0 1.5rem;
 }
 
 .carousel-inner {
-    height: 22rem;
-    overflow: visible !important;
+  height: 22rem;
+  overflow: visible !important;
 }
 
 .display-item {
-    display: flex;
-    align-items: start;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: start;
+  justify-content: space-evenly;
 }
 
 .item-img {
-    width: 28rem;
+  width: 28rem;
 }
 
 .golden-chest {
-    position: relative;
-    top: -2rem;
+  position: relative;
+  top: -2rem;
 }
 
 .silver-chest {
-    position: relative;
-    top: -3rem;
-    width: 32rem;
+  position: relative;
+  top: -3rem;
+  width: 32rem;
 }
 
 /*Buttons container*/
 
 .buttons-container {
-    display: flex;
-    justify-content: end;
-    column-gap: 1rem;
-    padding: 0 2rem;
+  display: flex;
+  justify-content: end;
+  column-gap: 1rem;
+  padding: 0 2rem;
 }
 
 .drop-items {
-    display: flex;
-    column-gap: .5rem;
+  display: flex;
+  column-gap: .5rem;
 }
 
 
 .item-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 1rem;
 }
 
 .item-price {
-    margin-top: 2rem;
-    font-weight: bold;
+  margin-top: 2rem;
+  font-weight: bold;
 
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  font-size: 1.4rem;
 }
 
 
 /*player info bar*/
 
 .player-info-container {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    column-gap: 5rem;
-    padding: 0 1.5rem;
-    background-image: linear-gradient(to bottom, rgb(107, 30, 16), rgb(83, 20, 9));
-    width: 100vw;
-    height: 3.2rem;
-    color: white;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  column-gap: 5rem;
+  padding: 0 1.5rem;
+  background-image: linear-gradient(to bottom, rgb(107, 30, 16), rgb(83, 20, 9));
+  width: 100vw;
+  height: 3.2rem;
+  color: white;
 }
 
 /*checkear inventario y combates*/
 
 .buttons-container {
-    display: flex;
-    justify-content: center;
-    padding: 2rem 0;
+  display: flex;
+  justify-content: center;
+  padding: 2rem 0;
+  position: relative;
+  z-index: 200;
 }
 
 
 /*chest open*/
 
-/* .items-slide-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0,0,0,.8);
-    position: fixed;
-    inset: 0;
-    z-index: 100;
-    transition: .5s ease-in-out;
-} */
+.items-slide-container {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, .8);
+  position: fixed;
+  inset: 0;
+  z-index: 100;
+  transition: .5s ease-in-out;
+}
 
 .item-display {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    row-gap: 1.5rem;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  row-gap: 1.5rem;
 }
 
 .chest-open {
-    width: 26rem;
+  width: 26rem;
 }
 
 .items-acquired {
-    display: flex;
-    column-gap: 4rem;
+  display: flex;
+  column-gap: 4rem;
 }
 
 .items-acquired img {
-    width: 12rem;
-    height: 12rem;
+  width: 12rem;
+  height: 12rem;
 }
 
 .resume-button {
-    margin: 2rem 0;
-    padding: .5rem 2rem;
+  margin: 2rem 0;
+  padding: .5rem 2rem;
 
 }
 
@@ -162,32 +168,178 @@ body {
 /*personal stash and inventory*/
 
 .stash-container {
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    inset: 0;
+  display: none;
+  justify-content: space-between;
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  background-image: url('/proyecto_objectGenerator/images/ancient\ greece.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .stash {
-    background-color: white;
-    height: 100vh;
-    width: 25rem;
+  background-image: url('/proyecto_objectGenerator/images/marmol-texture.webp');
+  height: 100vh;
+  width: 25rem;
+  padding: .5rem;
+  z-index: 10;
 }
 
-.stash-items-stats{
-    background-color: black;
-    width: 25rem;
-    height: 100vh;
+
+
+
+.card-item-info {
+  width: 100%;
+  height: 10rem;
+  background-color: bisque;
+
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  column-gap: .5rem;
+}
+
+.card-item-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.card-img-container {
+  background-color: white;
+}
+
+.first-column {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.card-item-img {
+  width: 10rem;
+  height: 10rem;
+}
+
+.sockets {
+  margin-left: 2rem;
+}
+
+.socket {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 2rem;
+  border: 2px solid black;
+}
+
+
+/*Options and stats*/
+.option-stats {
+  background-image: url('/proyecto_objectGenerator/images/stats-scroll.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 26rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  z-index: 10;
+}
+
+.stats-area {
+  position: absolute;
+  display: flex;
+  flex-flow: column nowrap;
+  top: 4rem;
+  left: 3rem;
+}
+
+.stats-area p {
+  margin: 0;
+}
+
+.action-buttons {
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  z-index: 200;
+  bottom: 1rem;
+}
+
+.action-btn {
+  width: 6rem;
 }
 
 .equipment {
-    background-color: white;
-    z-index: 90;
-    height: 100vh;
-    width: 25rem;
-    background-image: url('/proyecto_objectGenerator/images/siluete-removebg-preview.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top 2rem center;
-    position: relative;
+  background-color: bisque;
+  z-index: 90;
+  height: 100vh;
+  width: 25rem;
+  background-image: url('/proyecto_objectGenerator/images/siluete-removebg-preview.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top 2rem center;
+  position: relative;
+}
+
+.equipment-socket {
+  position: absolute;
+  background-color: rgb(216, 216, 216, .6);
+  border: 2px solid goldenrod;
+  border-radius: 100%;
+  width: 5rem;
+  height: 5rem;
+}
+
+.others-sockets {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+}
+
+.others-sockets div {
+  display: flex;
+  flex-flow: column nowrap;
+  row-gap: .5rem;
+}
+
+.other-socket {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100%;
+  background-color: rgb(216, 216, 216, .6);
+  border: 2px solid goldenrod;
+}
+
+.rightWeapon-socket {
+  top: 50%;
+  left: 60%;
+}
+
+.leftWeapon-socket {
+  top: 50%;
+  left: 20%;
+}
+
+.helmet-socket {
+  top: 8%;
+  left: 44%;
+}
+
+.gloves-socket {
+  top: 35%;
+  left: 20%;
+}
+
+.boots-socket {
+  top: 75%;
+  left: 40%;
+}
+
+.armor-socket {
+  top: 26%;
+  left: 44%;
+}
+
+.amulet-socket {
+  top: 2%;
+  left: 2%;
 }
